--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,13 +15,12 @@ nav {
   align-items: center;
   justify-content: space-between;
   margin-right: 10%;
-  margin-top: 1rem;
+  margin-top: 1%;
   color: rgb(0, 0, 0);
   align-items: center;
   font-family: "Atkinson Hyperlegible Next", serif;
   font-weight: 30;
   font-size: 18px;
-  border-bottom: 1px solid black;
 }
 
 .logo {
@@ -32,6 +31,16 @@ nav {
 
 .selection a{
   margin-left: 1rem;
+}
+
+.medium {
+  margin-top: 3%;
+  font-family: "Atkinson Hyperlegible Next", serif;
+  font-weight: 30;
+  font-size: 50px;
+  color: black;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer {
