--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -33,8 +33,13 @@ nav {
   margin-left: 1rem;
 }
 
+.container {
+  display: flex;
+  flex-direction: row;
+margin-top: 3%;
+}
+
 .medium {
-  margin-top: 3%;
   font-family: "Atkinson Hyperlegible Next", serif;
   font-weight: 30;
   font-size: 50px;
@@ -42,6 +47,22 @@ nav {
   display: flex;
   flex-direction: column;
 }
+
+.main {
+  margin-left: 3%;
+  overflow-y: scroll;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+.card {
+  flex: 0 1 24%;
+}
+
 
 .footer {
   color: white;
