--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,7 +2,7 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   width: 100%;
-  background-color: #e4ded1;
+  background-color: #fdf9e8;
 }
 
 a {
@@ -48,19 +48,36 @@ margin-top: 3%;
   flex-direction: column;
 }
 
-.main {
-  margin-left: 3%;
-  overflow-y: scroll;
-}
-
-.cards {
+.card-container {
+  margin-left: 1%;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 2%;
 }
-.card {
-  flex: 0 1 24%;
+
+.image-card {
+  flex: 1 0 24%;
+  cursor: pointer;
+}
+
+.card-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+
+@media screen and (max-width: 768px) {
+  .image-card {
+      flex: 1 1 calc(50% - 20px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .image-card {
+      flex: 1 1 100%;
+  }
 }
 
 
