--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,7 +2,9 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   width: 100%;
+  min-height: 100vh;
   background-color: #fdf9e8;
+  overflow: hidden;
 }
 
 a {
@@ -54,16 +56,22 @@ margin-top: 3%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  overflow-y: auto;
+  padding-bottom: 20px;
+  gap: 20px;
 }
 
 .image-card {
   flex: 1 0 24%;
   cursor: pointer;
+  border-radius: 20px;
+  border: 1px solid black;
+  overflow: hidden;
 }
 
-.card-image {
+.image-card img {
   width: 100%;
-  height: 200px;
+  height: 100%;
   object-fit: cover;
 }
 
