--- a/dms5/dms5a1/style.css
+++ b/dms5/dms5a1/style.css
@@ -5,14 +5,58 @@
     margin: 0;
 }
 
-:root {
-    --col-01: black;
-    --col-02: white;
-    --col-03: #e6abfe;
-    --col-04: #598e8f;
-    --border: single 1rem var(--col-02);
-}
-
 body {
     font-family: "Montserrat", sans-serif;
+    background-color: #fdf4df;
+    display: flex;
+    flex-direction: column;
+    overflow-y: hidden;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding-left: 1%;
+    border-bottom: 2px solid black;
+    overflow: hidden;
+    height: 10vh;
+}
+wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+nav {
+    height: 89vh;
+    position: sticky;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vh;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    height: 100%;
+    text-decoration: none;
+    color: black;
+}
+
+.button:hover {
+    background-color: #f8deb8;
+    -webkit-transition: background-color 500ms linear;
+    -ms-transition: background-color 500ms linear;
+    transition: background-color 500ms linear;
+}
+
+.content {
+    flex-direction: flex-end;
 }
