--- a/dms5/dms5a1/style.css
+++ b/dms5/dms5a1/style.css
@@ -10,10 +10,10 @@ body {
     background-color: #fdf4df;
     display: flex;
     flex-direction: column;
-    overflow-y: hidden;
 }
 
 .title {
+    position: sticky;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,9 +30,8 @@ wrapper {
 }
 
 nav {
-    height: 89vh;
     position: sticky;
-    overflow: hidden;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     
@@ -59,4 +58,11 @@ nav {
 
 .content {
     flex-direction: flex-end;
+}
+
+.qns {
+    padding-left: 1%;
+    margin-top: 1%;
+    padding-bottom: 3%;
+    border-bottom: 2px solid black;
 }
