--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,7 +3,7 @@ body {
   margin-right: 5%;
   width: 100%;
   min-height: 100vh;
-  background-color: #fdf9e8;
+  background-color: #000000;
   overflow: hidden;
 }
 
@@ -18,7 +18,7 @@ nav {
   justify-content: space-between;
   margin-right: 10%;
   margin-top: 1%;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   align-items: center;
   font-family: "Atkinson Hyperlegible Next", serif;
   font-weight: 30;
