--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-color: black;
+    background-color: rgb(252, 244, 220);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,4 +12,43 @@ body{
     width: 800px;
     height: 500px;
     border: 1px solid #ccc;
+}
+
+.options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
+}
+
+
+button {
+  background-color: #ffffff;
+  display: flex;
+  margin-left: 10px;
+  margin-right: 10px;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  border-radius: 10rem;
+  transition-duration: 0.3s;
+}
+
+button:hover {
+  background-color: #e2e2e2;
+}
+
+#colourPicker {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+.shapeSelector {
+  width: 100%;
+  display: flex;
+}
+
+.playbackOptions {
+  width: 100%;
+  display: flex;
 }
