--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -5,7 +5,20 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: none;
   }
+
+.row {
+  display: flex;
+}
+
+h1 {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+}
+img {
+  height: 500px;
+}
 
 #stageContainer {
     background-color: white;
@@ -32,16 +45,24 @@ button {
   border: 0px;
   border-radius: 10rem;
   transition-duration: 0.3s;
+  cursor: pointer;
 }
 
 button:hover {
   background-color: #e2e2e2;
 }
 
+.tempoControl {
+  display: flex;
+  font-family:Arial, Helvetica, sans-serif;
+}
+
+
 #colourPicker {
   width: 50px;
   height: 50px;
   margin-left: 10px;
+  cursor: pointer;
 }
 .shapeSelector {
   width: 100%;
@@ -52,3 +73,4 @@ button:hover {
   width: 100%;
   display: flex;
 }
+
