--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     background-color: rgb(252, 244, 220);
     display: flex;
@@ -38,6 +36,7 @@ img {
 button {
   background-color: #ffffff;
   display: flex;
+  min-height: 50px;
   margin-left: 10px;
   margin-right: 10px;
   justify-content: center;
@@ -55,6 +54,12 @@ button:hover {
 .tempoControl {
   display: flex;
   font-family:Arial, Helvetica, sans-serif;
+}
+
+#tempoDisplay {
+  display: inline-block;
+  width: 3ch;
+  text-align: right;
 }
 
 
