--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -79,3 +79,13 @@ button:hover {
   display: flex;
 }
 
+@keyframes bounce {
+  0%   { transform: scale(1); }
+  50%  { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
+.speaker-bounce {
+  animation: bounce 0.2s;
+  transition: all 0.3s cubic-bezier(0.05, 0.95, 0.43, 0.95);
+}
