--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -61,6 +61,19 @@ button:hover {
   width: 3ch;
   text-align: right;
 }
+
+.vol {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#volDisplay {
+  display: inline-block;
+  width: 3ch;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+}
 .shapeSelector {
   width: 100%;
   display: flex;
