--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -30,26 +30,32 @@ img {
   justify-content: center;
   align-items: center;
   margin-top: 2%;
+  background-color: rgb(68, 68, 68);
+  border: 3px solid rgb(137, 137, 137);
+  border-radius: 2em;
+  padding: 20px;
 }
 
 
 button {
-  background-color: #ffffff;
+  background-color: #cfcfcf;
   display: flex;
-  min-height: 50px;
-  margin-left: 10px;
-  margin-right: 10px;
+  height: 80px;
+  width: 80px;
+  margin-left: 5px;
+  margin-right: 5px;
   justify-content: center;
   align-items: center;
-  border: 0px;
-  border-radius: 10rem;
+  border: 2px solid black;
+  border-radius: 2em;
   transition-duration: 0.3s;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #e2e2e2;
+  background-color: #848484;
 }
+
 
 .tempoControl {
   display: flex;
@@ -80,7 +86,8 @@ button:hover {
 }
 
 .changeShape:focus {
-background-color: #ffd4d4;
+background-color: #767676;
+transform: rotateX(20deg) translateY(5px);
 }
 
 .playbackOptions {
