--- a/dms5/dms5a3/style.css
+++ b/dms5/dms5a3/style.css
@@ -220,5 +220,23 @@ transform: rotateX(20deg) translateY(5px);
 
 .speaker-bounce {
   animation: bounce 0.2s;
-  transition: all 0.3s cubic-bezier(0.05, 0.95, 0.43, 0.95);SE
+  transition: all 0.3s cubic-bezier(0.05, 0.95, 0.43, 0.95);
+}
+
+.legend {
+display: flex;
+justify-content: center;
+flex-direction: column;
+margin: 0;
+font-family:'Courier New', Courier, monospace
+}
+
+h4 {
+  margin:10px, 0, 0, 0;
+  padding: 0;
+}
+
+h5 {
+  margin: 0;
+  padding: 0;
 }
