--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -20,72 +20,19 @@ nav {
   margin-top: 1%;
   color: rgb(255, 255, 255);
   align-items: center;
-  font-family: "Atkinson Hyperlegible Next", serif;
-  font-weight: 30;
+  font-family: "Inter", sans-serif;
+  font-weight: 100;
   font-size: 18px;
 }
 
 .logo {
   font-size: 24px;
-  font-family: "IBM Plex Serif", serif;
-  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  font-weight: 200;
 }
 
 .selection a{
   margin-left: 1rem;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-margin-top: 3%;
-}
-
-.medium {
-  font-family: "Atkinson Hyperlegible Next", serif;
-  font-weight: 30;
-  font-size: 50px;
-  color: black;
-  display: flex;
-  flex-direction: column;
-}
-
-.card-container {
-  margin-left: 1%;
-  width: 80%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  overflow-y: auto;
-  padding-bottom: 20px;
-  gap: 20px;
-}
-
-.image-card {
-  flex: 1 0 24%;
-  cursor: pointer;
-  border-radius: 20px;
-  border: 1px solid black;
-  overflow: hidden;
-}
-
-.image-card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-
-@media screen and (max-width: 768px) {
-  .image-card {
-      flex: 1 1 calc(50% - 20px);
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .image-card {
-      flex: 1 1 100%;
-  }
 }
 
 
