--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -60,15 +60,31 @@ h3 {
 
 .nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 20px;
   margin-top: 10px;
 }
 
+.name {
+  display: flex;
+  width: 100%;
+  color: white;
+  text-decoration: none;
+  font-family: "Funnel Display", sans-serif;
+  font-size: 20px;
+  font-weight: 100;
+}
+
+.name a {
+  margin-top: 0;
+  margin-left: 1%;
+}
+
 .nav-links {
   display: flex;
+  width: 100%;
+  justify-content: flex-end;
   gap: 20px;
+  margin-right: 1%;
 }
 
 .nav a {
@@ -156,9 +172,9 @@ margin-top: 2%;
 }
 
 .buttonContainer button.active#all {
-  background-color: #ffffff;
+  background-color: #cf94f1;
   color: #000;
-    box-shadow: 0 0 12px #ffffff;
+  box-shadow: 0 0 12px #cf94f1;
 }
 
 .buttonContainer button.active#web {
@@ -202,7 +218,7 @@ margin-top: 2%;
   margin-top: 2%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
+  column-gap: 10px;
   row-gap: 30px;
   padding: 0 20px;
   max-width: 100%;
@@ -213,7 +229,7 @@ margin-top: 2%;
 }
 
 .image-card {
-  max-width: 700px;
+  max-width: 950px;
   width: 100%;
   height: auto;
   display: flex;
@@ -221,14 +237,22 @@ margin-top: 2%;
   align-items: flex-start;
     transition: opacity 0.5s ease;
       cursor: pointer;
+      padding: 20px;
+      border-radius: 0.5em;
+}
+
+.image-card:hover {
+  background-color: rgba(46, 46, 46, 0.5);
+  transition: 0.5s;
 }
 
 .image-card img {
   width: 100%;
-  height: 300px;
+  height: 450px;
   object-fit: cover;
   display: block;
   margin-bottom: 5px;
+  border-radius: 0.2em;
 }
 
 .caption {
