--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -61,7 +61,7 @@ h3 {
 .nav {
   display: flex;
   gap: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .name {
@@ -289,14 +289,8 @@ margin-top: 2%;
 }
 
 @keyframes fadeUp {
-  from {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
 .image-card {
