--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -62,6 +62,16 @@ body {
   margin-top: 10vh;
 }
 
+.main {
+  display: flex;
+  height: 100vh;
+  color: white;
+}
+
+.abtDescription {
+  margin-left: 5%;
+}
+
 h1 {
   color: white;
   font-family: "Funnel Display", sans-serif;
